src/component/container/App.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: SegoeUI, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

html,
body,
#root {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

.App-header {
    padding: 48px 16px 16px 16px;
    color: #f8f8f8;
    background-color: #038387;
    font-weight: 100;
    line-height: 1;
}

.App-descriptor {
    color: #f8f8f8;
    padding: 0.5rem 5rem 1rem 5rem;
    background-color: #038387;
}

.App-headerTitle {
    font-size: 48px;
    text-align: center;
}

.App-headerSubDescription {
    text-align: center;
}

.App-descriptionTitle {
    font-size: 32px;
    margin: 0;
    font-smoothing: antialiased;
}

.App-descriptorList {
    display: flex;
    list-style: none;
    padding: 0;
}

.App-descriptorListItem {
    flex: 1;
    padding: 0 20px;
}

.App-descriptorListItemTitle {
    display: block;
    font-size: 24px;
    font-weight: 300;
    margin-bottom: 16px;
    margin-top: 32px;
}

.App-descriptorListItemDescription {
    display: block;
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 12px;
}

.App-form {
    padding: 1rem 5rem;
}

.App-form-ShowButton {
    margin: 0.5rem 0;
}

.App-content {
    min-width: 100%;
    width: 100%;
}

.App-contentHeader {
    display: flex;
    justify-content: flex-end;
}

.App-contentDownloadButton {
    padding: 0 20px;
}

.App-contentBody {
    display: flex;
    min-width: 100%;
    width: 100%;
}

.App-contentSource,
.App-contentPreview {
    flex: 1;
    width: 50%;
    margin: 1em;
    padding: 1em;
    font-size: 16px;
    background-color: #f8f8f8;
}

